--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Webjeda cards
+title: 会跳舞的字
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Webjeda Cards is a Bootstrap based jekyll theme for portfolio, photography or any kind of blog.
+ 会跳舞的字是一个让文字动起来的App
   
   
 baseurl: "/" # the subpath of your site, e.g. /blog
