change pics and text

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: 会跳舞的字
-email: your-email@domain.com
+email: zheng.wan@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
  会跳舞的字是一个让文字动起来的App
   
