change pics and text

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ built-by: 会跳舞的字
 
 copyright:
    name: 会跳舞的字
-   link: 'http://wanzheng2019.github.io'
+   link: 'http://wanzheng2019.github.io/'
 
 # Build settings
 markdown: kramdown
